[gd_scene load_steps=26 format=3 uid="uid://b7bnusvjaw5cn"]

[ext_resource type="Script" path="res://atc.gd" id="1_3bmlm"]
[ext_resource type="Texture2D" uid="uid://b4ruxmye1feb3" path="res://sprite/bg_sky.png" id="2_qn3ni"]
[ext_resource type="Texture2D" uid="uid://d2f4xnrof1wxe" path="res://sprite/warning-sign.png" id="3_3ee7r"]
[ext_resource type="Texture2D" uid="uid://0nfima7ggl6f" path="res://sprite/explosion.png" id="4_ln4fp"]
[ext_resource type="AudioStream" uid="uid://dt7u6ufkiydhh" path="res://sound/EXCLAM.wav" id="5_t80a3"]
[ext_resource type="Texture2D" uid="uid://qtl1dbaw4vsg" path="res://sprite/cloud.png" id="5_vcvgk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6iexc"]
atlas = ExtResource("3_3ee7r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s17dq"]
atlas = ExtResource("3_3ee7r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ynux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iexc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s17dq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b7tv6"]
atlas = ExtResource("4_ln4fp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyv2l"]
atlas = ExtResource("4_ln4fp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbqn1"]
atlas = ExtResource("4_ln4fp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohhh2"]
atlas = ExtResource("4_ln4fp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqhbs"]
atlas = ExtResource("4_ln4fp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrm6a"]
atlas = ExtResource("4_ln4fp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl6ro"]
atlas = ExtResource("4_ln4fp")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p813u"]
atlas = ExtResource("4_ln4fp")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kufbn"]
atlas = ExtResource("4_ln4fp")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e0ec"]
atlas = ExtResource("4_ln4fp")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6o4y"]
atlas = ExtResource("4_ln4fp")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r4cfn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7tv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyv2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbqn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohhh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqhbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrm6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl6ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p813u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kufbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e0ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6o4y")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7a6oy"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uwqgm"]
particle_flag_disable_z = true
direction = Vector3(1, -0.2, 0)
spread = 27.95
gravity = Vector3(0, 0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 31.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pcjia"]
particle_flag_disable_z = true
direction = Vector3(-1, -0.2, 0)
spread = 27.95
gravity = Vector3(0, 0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 31.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kip2d"]
load_path = "res://.godot/imported/cloud.png-5911180b3a034b7e6f46670c3fcc6017.ctex"

[node name="ATC" type="Node"]
script = ExtResource("1_3bmlm")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_qn3ni")
centered = false

[node name="Spawner" type="Timer" parent="."]

[node name="Warner" type="Timer" parent="."]
one_shot = true

[node name="Warning" type="AnimatedSprite2D" parent="."]
position = Vector2(-16, -16)
sprite_frames = SubResource("SpriteFrames_6ynux")
autoplay = "default"

[node name="Score" type="Label" parent="."]
offset_right = 45.0
offset_bottom = 20.0
text = "Score"

[node name="ScoreNum" type="Label" parent="."]
offset_left = 44.0
offset_right = 89.0
offset_bottom = 20.0

[node name="Freeze" type="Timer" parent="."]
process_mode = 2
one_shot = true
autostart = true

[node name="Explosion" type="AnimatedSprite2D" parent="Freeze"]
visible = false
z_index = 2
sprite_frames = SubResource("SpriteFrames_r4cfn")

[node name="Spawnarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawnarea"]
shape = SubResource("CircleShape2D_7a6oy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Spawnarea"]
stream = ExtResource("5_t80a3")
volume_db = 8.433
max_distance = 563.0
attenuation = 1.10957

[node name="Cloudspawner" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(-43, 222)
amount = 14
process_material = SubResource("ParticleProcessMaterial_uwqgm")
texture = ExtResource("5_vcvgk")
lifetime = 104.03
preprocess = 24.25

[node name="Cloudspawner2" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
position = Vector2(583, 274)
amount = 14
process_material = SubResource("ParticleProcessMaterial_pcjia")
texture = SubResource("CompressedTexture2D_kip2d")
lifetime = 104.03
preprocess = 24.25

[node name="SpawnIncreaser" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="timeout" from="Spawner" to="." method="_on_spawner_timeout"]
[connection signal="timeout" from="Warner" to="." method="_on_warner_timeout"]
[connection signal="timeout" from="Freeze" to="." method="_on_freeze_timeout"]
[connection signal="timeout" from="SpawnIncreaser" to="." method="_on_spawn_increaser_timeout"]
